# autoresearch-tsp

./: .gitignore  AGENTS.md  README.md
.beads/: issues.jsonl  metadata.json
tsp_heuristic/: AGENTS.md  README.md  ideas.md  justfile  prepare.py  program.md  pyproject.toml  recap-1.md  recap-4.md  solve.py
tsp_heuristic/.claude/agents/: paper-researcher.md  recap-writer.md
tsp_heuristic/.claude/hooks/: block-dep-install.sh  block-frozen-edits.sh
tsp_heuristic/.claude/skills/chart-progress/: SKILL.md
tsp_heuristic/.claude/skills/multi-seed-eval/: SKILL.md
tsp_heuristic/.claude/skills/permute-ideas/: SKILL.md
tsp_heuristic/.claude/skills/postmortem/: SKILL.md
tsp_heuristic/.claude/skills/untried-ideas/: SKILL.md
tsp_heuristic/recaps/: recap-3.md  recap-4.md  recap-5.md  recap-6.md  recap-7.md  recap-8.md
tsp_heuristic/tsp_research/: recap-2.md
tsp_heuristic/tsp_research/.claude/hooks/: block-frozen-edits.sh
tsp_neural/: .gitignore  AGENTS.md  README.md  data  harvest.py  ideas.md  justfile  program.md  pyproject.toml  solve.py  train.py
tsp_neural/.claude/: settings.json
tsp_neural/.claude/agents/: paper-researcher.md  recap-writer.md
tsp_neural/.claude/commands/: recap.md
tsp_neural/.claude/hooks/: recap-tick.sh
tsp_neural/.claude/skills/chart-progress/: SKILL.md
tsp_neural/.claude/skills/compare-runs/: SKILL.md
tsp_neural/.claude/skills/evolve-tooling/: SKILL.md
tsp_neural/.claude/skills/multi-seed-eval/: SKILL.md
tsp_neural/.claude/skills/permute-ideas/: SKILL.md
tsp_neural/recaps/: recap-1.md  recap-2.md  recap-3.md  recap-4.md
(+21 files in other folders)
