[project]
name = "tsp-neural"
version = "0.1.0"
description = "Neural-guided local search for the Kaggle Santa 2018 TSP — sibling to tsp_research/."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "sympy>=1.13",
    "scipy>=1.13",
    "numba>=0.60",
    "torch==2.9.1",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
